# PyGhostID

./: PyGhostID.yaml  README.md  pyproject.toml
.github/: copilot-instructions.md
paper/: models_paper.py  utils_paper.py
paper/Figure 1/: Figure1 - old.py  Figure1.ipynb  Figure1.py  Figure2.py
paper/Figure 3/: Figure3.ipynb  Hastings_slowFast.ode
paper/Figure 4/: CoupledThetaNeurons_Nonident _cartesian.ode  CoupledThetaNeurons_Nonident.ode  CoupledThetaNeurons_ident.ode  Figure4.ipynb  Figure4.py  Figure4a.py  thetaNeurons_ghostDimensions.npy  thetaNeurons_ghostDimensions_26.npy
paper/Figure 5/: Fig5_result_pss_defaultParams.pkl  Figure5.ipynb  Figure5.py  result_pss_tau1sweep.pkl
paper/Figure 6/: CoupledThetaNeurons_ident.ode  Fig6_result_pss.pkl  Figure6.ipynb  Figure6.py  ThetaNeuronsNCs_test.py  WunderlingModel.ode
paper/Figure 7/: Figure7.ipynb  GRN_test.ipynb  myDict.pkl  test.pkl  write_read_dicts_test.ipynb
paper/Figure 8/: Figure8.ipynb  data_runtimes_network1.npy  runtimes_ghostID.npy
paper/Supplementary Figures/: SFig_numericalNoise.ipynb  Supp Figure - false positive ghost.ipynb  results_pss.pkl  (+7 more)
test/: 250927_Testmodels_ghostID.py  251002_PhaseSpace_Trj.py  251003_PhaseSpace_Grid.py  251003_qOnGrid.py  251004_Testmodels_ghostID_core.py  251004_eigenvectorsOfGhosts.py  251006_FHN_networks.py  251007_ghostBranch.py  251007_icsFromEigVecs.py  251021_ghostBranch.py  251101_pkg_test.py  251221_ghostBranch.py  251228_sortfunction_test.py  260101_GRNghost.py  AdjM,rs=29,n=15.npy  PCA_test.ipynb  _core_251004.py  _utils_251004.py  functions_v08.py
(+850 files in other folders)
