[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyGhostID"
version = "1.0.0"
description = "A Python package for identifying ghosts in the vicinity of saddle-node bifurcations and composite ghost structures in dynamical systems."
authors = [
  { name="Daniel Koch", email="daniel.koch@umanitoba.ca" }
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12.3"

dependencies = [
  "jax>=0.4.35",
  "matplotlib>=3.10.7",
  "networkx>=3.4.2",
  "numpy>=2.3.4",
  "scipy>=1.16.2",
  "tqdm>=4.66.5"
]

[project.urls]
"Homepage" = "https://github.com/KochLabCode/PyGhostID"